Add mode with no regular expressions

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,11 +74,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "name = 'PASS/88.jpeg'\n",
+    "name = '89.jpeg'\n",
     "image = cv2.imread(name)\n",
     "image = rotate_passport(image)\n",
     "image = cut_passport(image)\n",
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,13 +144,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "image = cv2.imread('result/7.png')\n",
     "(h, w, _) = image.shape\n",
     "box = image[int(h/2):h, int(w/3):w]\n",
     "bottom = read_text_from_box(box)"
@@ -147,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,13 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "image = imutils.rotate_bound(image, -90)\n",
     "(h, w, _) = image.shape\n",
-    "box = image[0:int(y/10), 0:w]\n",
+    "box = image[0:int(h/10), 0:w]\n",
     "number = read_text_from_box(box)"
    ]
   },
@@ -176,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 571,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,18 +240,31 @@
     "\n",
     "# Looking for issue authority\n",
     "\n",
-    "AUTHORITIES = ['отделом', 'УФМС', 'МФЦ']\n",
+    "AUTHORITIES = ['отделом', 'УФМС', 'МФЦ', 'УВД']\n",
+    "\n",
+    "authority = ''\n",
     "\n",
     "for auth in AUTHORITIES:\n",
     "    if re.search(auth, top, flags=re.I) is not None:\n",
     "        \n",
     "        issued = re.search(r'{}.*'.format(auth), top, flags=re.I)[0].split(' ')\n",
-    "        authority = ''\n",
     "        for i in issued:\n",
     "            if all(c.isupper() or c == '-' or c == '.' for c in i):\n",
     "                authority += i + ' '\n",
-    "        \n",
-    "        passport['ocr_result']['issue_authority'] = authority\n",
+    "        break\n",
+    "                \n",
+    "    \n",
+    "# If nothing that could be related to issue authority was found,\n",
+    "# consider all words in the top to be such\n",
+    "if authority is '':\n",
+    "    \n",
+    "    for word in top.split():\n",
+    "        if all(c.isalpha() or c == '-' or c == '.' for c in word) \\\n",
+    "                    and len(word) > 3:\n",
+    "            authority += word + ' '\n",
+    "            \n",
+    "    \n",
+    "passport['ocr_result']['issue_authority'] = authority\n",
     "    \n",
     "# Looking for issue date\n",
     "date = re.search(r'\\d{2}\\.\\d{2}\\.\\d{4}', top)\n",
@@ -252,14 +275,14 @@
     "full_name = re.search(r'(.*(ВИЧ|ВНА))', bottom, flags=re.I)\n",
     "\n",
     "if full_name is not None:\n",
-    "    full_name = full_name[0].split(' ')\n",
+    "    full_name = full_name[0].split()\n",
     "\n",
     "    name = []\n",
     "    for n in full_name:\n",
-    "        if all(c.isupper() for c in n) and len(n) > 3:\n",
+    "        if all(c.isalpha() for c in n) and len(n) > 3:\n",
     "            name.append(n)\n",
     "        \n",
-    "    if len(name) > 3:\n",
+    "    if len(name) > 2:\n",
     "        passport['ocr_result']['patronymic_name'] = name[-1]\n",
     "        passport['ocr_result']['name'] = name[-2]\n",
     "        passport['ocr_result']['surname'] = name[-3]\n",
@@ -304,37 +327,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ocr_result': {'doc_type': 'passport',\n",
-       "  'issue_authority': 'УФМС РОССИИ   ПО АВТОНОМ. ОКР. -ЮГРЕ  В ГОРОДЕ СУРГУТЕ О . ',\n",
-       "  'issue_code': '860-004',\n",
-       "  'issue_date': '',\n",
-       "  'surname': '',\n",
-       "  'name': '',\n",
-       "  'patronymic_name': '',\n",
-       "  'birth_date': '19.03.1990',\n",
-       "  'gender': 'female',\n",
-       "  'birth_place': 'ГРУЗИНСКАЯ ДНАСТАСИЯ СЕРГЕЕЕНА БЕЛЫЙ СУРГУТСКОГО РАЙОНА ТЮМЕНСКОЙ ОБЛАСТИ ',\n",
-       "  'series': '67 10',\n",
-       "  'number': '008593'},\n",
-       " 'text': ''}"
-      ]
-     },
-     "execution_count": 582,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "passport"
-   ]
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
