--- a/Production.ipynb
+++ b/Production.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +74,10 @@
     "    cv2.rectangle(output, (x, y), (x + w, y + h),\n",
     "                  (0, 0, 255), 2)\n",
     "    \n",
+    "    \"\"\"\n",
     "    cv2.imshow('Output', output)\n",
     "    cv2.waitKey(0)\n",
+    "    \"\"\"\n",
     "    \n",
     "    (H, W, _) = image.shape\n",
     "    \n",
@@ -101,15 +103,17 @@
     "    \n",
     "    image = image[startY:endY, startX:endX]\n",
     "\n",
+    "    \"\"\"\n",
     "    cv2.imshow('Image', image)\n",
     "    cv2.waitKey(0)\n",
+    "    \"\"\"\n",
     "    \n",
     "    return image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,9 +145,11 @@
     "    rotated = cv2.warpAffine(image, M, (w, h),\n",
     "                flags=cv2.INTER_CUBIC, borderMode=cv2.BORDER_REPLICATE)\n",
     "       \n",
+    "    \"\"\"\n",
     "    cv2.imshow(\"Input\", image)\n",
     "    cv2.imshow(\"Rotated\", rotated)\n",
     "    cv2.waitKey(0)\n",
+    "    \"\"\"\n",
     "    \n",
     "    return rotated"
    ]
@@ -157,15 +163,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "def locate_text(image, type_):\n",
     "    \n",
+    "    image = image.copy()\n",
+    "    \n",
     "    if type_ == 'top':\n",
     "        rectKernel = cv2.getStructuringElement(cv2.MORPH_RECT, (20, 3))\n",
-    "    elif type_ == 'bottom':\n",
+    "    elif type_ == 'bottom' or type_ == 'number':\n",
     "        rectKernel = cv2.getStructuringElement(cv2.MORPH_RECT, (9, 3))\n",
     "        \n",
     "    sqKernel = cv2.getStructuringElement(cv2.MORPH_RECT, (12, 12))\n",
@@ -175,8 +183,10 @@
     "    gray = cv2.GaussianBlur(gray, (5, 5), 0)\n",
     "    tophat = cv2.morphologyEx(gray, cv2.MORPH_BLACKHAT, rectKernel)\n",
     "    \n",
+    "    \"\"\"\n",
     "    cv2.imshow('Tophat', tophat)\n",
     "    cv2.waitKey(0)\n",
+    "    \"\"\"\n",
     "    \n",
     "    gradX = cv2.Sobel(tophat, ddepth=cv2.CV_32F, dx=1, dy=0,\n",
     "                    ksize=-1)\n",
@@ -185,8 +195,10 @@
     "    gradX = (255 * ((gradX - minVal) / (maxVal - minVal)))\n",
     "    gradX = gradX.astype(\"uint8\")\n",
     "    \n",
+    "    \"\"\"\n",
     "    cv2.imshow('Gradient', gradX)\n",
     "    cv2.waitKey(0)\n",
+    "    \"\"\"\n",
     "    \n",
     "    gradX = cv2.morphologyEx(gradX, cv2.MORPH_CLOSE, rectKernel)\n",
     "    thresh = cv2.threshold(gradX, 0, 255,\n",
@@ -204,18 +216,28 @@
     "    cnts = cv2.findContours(thresh.copy(), cv2.RETR_EXTERNAL,\n",
     "                cv2.CHAIN_APPROX_SIMPLE)\n",
     "    cnts = imutils.grab_contours(cnts)\n",
+    "    cnts = contours.sort_contours(cnts,\n",
+    "                    method=\"top-to-bottom\")[0]\n",
     "    locs = []\n",
     "    \n",
     "    for (i, c) in enumerate(cnts):\n",
     "        (x, y, w, h) = cv2.boundingRect(c)\n",
     "        ar = w / float(h)\n",
     "        \n",
-    "        if w > 10 and h > 10 and ar > 2.5:\n",
-    "            locs.append((x, y, w, h))\n",
-    "    \n",
-    "    locs = sorted(locs, key=lambda x:x[0])\n",
+    "        if type_ != 'number':\n",
+    "            if w > 10 and h > 10 and ar > 2.5:\n",
+    "                locs.append((x, y, w, h))\n",
+    "        else:\n",
+    "            if w > 10 and h > 10:\n",
+    "                locs.append((x, y, w, h))\n",
+    "\n",
+    "    #locs = sorted(locs, key=lambda x:x[0])\n",
+    "\n",
     "    output = []\n",
     "    text = ''\n",
+    "    \n",
+    "    (h, w, _) = image.shape\n",
+    "    \n",
     "    \n",
     "    for (i, (gX, gY, gW, gH)) in enumerate(locs):\n",
     "        groupOutput = []\n",
@@ -225,19 +247,15 @@
     "        group = cv2.threshold(group, 0, 255,\n",
     "                    cv2.THRESH_BINARY | cv2.THRESH_OTSU)[1]\n",
     " \n",
-    "        digitCnts = cv2.findContours(group.copy(), cv2.RETR_EXTERNAL,\n",
-    "                    cv2.CHAIN_APPROX_SIMPLE)\n",
-    "        digitCnts = imutils.grab_contours(digitCnts)\n",
-    "        digitCnts = contours.sort_contours(digitCnts,\n",
-    "                    method=\"left-to-right\")[0]\n",
     "        \n",
     "        \"\"\"\n",
     "        cv2.rectangle(image, (gX - 5, gY - 5),\n",
     "                        (gX + gW + 5, gY + gH + 5), (0, 0, 255), 2)\n",
     "        \"\"\"\n",
     "        \n",
+    "        \n",
     "        text += read_text_from_box(image, gX - 5, gY - 5,\n",
-    "                           gX + gW + 5, gY + gH + 5) + '\\n'\n",
+    "                           gX + gW + 5, gY + gH + 5) + ' '\n",
     "        \n",
     "        \"\"\"\n",
     "        cv2.imshow('ROI', image)\n",
@@ -249,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,16 +281,14 @@
     "    \"\"\"\n",
     "    \n",
     "    box = cv2.resize(box, None, fx=2, fy=2, interpolation=cv2.INTER_CUBIC)\n",
-    "    \n",
+    "\n",
     "    gray = cv2.cvtColor(box.copy(), cv2.COLOR_BGR2GRAY)\n",
-    "    \n",
     "\n",
     "    blurred = cv2.medianBlur(gray, 1)\n",
-    "    thresh = cv2.threshold(blurred.copy(), 0, 225, \\\n",
+    "    thresh = cv2.threshold(blurred.copy(), 0, 225,\n",
     "                           cv2.THRESH_BINARY + cv2.THRESH_OTSU)[1]\n",
-    "    \n",
-    "    \n",
-    "    return image_to_string(thresh, lang='rus')"
+    "\n",
+    "    return image_to_string(thresh, lang='rus').replace('\\n', ' ')"
    ]
   },
   {
@@ -284,11 +300,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'test/225.jpeg'\n",
+    "name = 'test/102.jpeg'\n",
     "image = cv2.imread(name)\n",
     "image = imutils.resize(image, width=1000)\n",
     "\n",
@@ -303,49 +319,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "(h, w, _) = image.shape\n",
-    "box = image[int(h/2):h, int(w/3):w]\n",
-    "bottom = locate_text(box, type_='bottom')"
+    "basic_box = image[int(h/2):h, int(w/3):w]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(h, w, _) = basic_box.shape\n",
+    "box = basic_box[0:int(h/2), 0:w]\n",
+    "full_name = locate_text(box, type_='bottom')\n",
+    "\n",
+    "bottom = locate_text(basic_box, type_='bottom')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'copy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-119-c451bfda7302>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mbox\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimage\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtop\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlocate_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbox\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtype_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'top'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-80-beabc8a75f87>\u001b[0m in \u001b[0;36mlocate_text\u001b[1;34m(image, type_)\u001b[0m\n\u001b[0;32m     63\u001b[0m                     cv2.THRESH_BINARY | cv2.THRESH_OTSU)[1]\n\u001b[0;32m     64\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m         digitCnts = cv2.findContours(group.copy(), cv2.RETR_EXTERNAL,\n\u001b[0m\u001b[0;32m     66\u001b[0m                     cv2.CHAIN_APPROX_SIMPLE)\n\u001b[0;32m     67\u001b[0m         \u001b[0mdigitCnts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrab_contours\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdigitCnts\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'copy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "box = image[0:int(h/3), 0:w]\n",
+    "(h, w, _) = image.shape\n",
+    "box = image[0:int(h/2), 0:w]\n",
     "top = locate_text(box, type_='top')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_ = imutils.rotate_bound(image, -90)\n",
+    "image_ = imutils.rotate_bound(box, -90)\n",
     "(h, w, _) = image_.shape\n",
     "number = read_text_from_box(image_, 0, 0, w, int(h/10))"
    ]
@@ -373,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,16 +435,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
-    "passport['text'] = top + bottom"
+    "passport['text'] = top + bottom + number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,68 +453,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Looking for issue code\n",
-    "code = re.search(r'\\d{3}-\\d{3}', top)\n",
+    "code = re.search(r'\\d{3}.{1,3}\\d{3}', top)\n",
     "if code is not None:\n",
     "    passport['ocr_result']['issue_code'] = code[0]\n",
     "\n",
     "# Looking for issue authority\n",
-    "\n",
-    "AUTHORITIES = ['отделом', 'УФМС', 'МФЦ', 'УВД']\n",
-    "\n",
-    "authority = ''\n",
-    "\n",
-    "for auth in AUTHORITIES:\n",
-    "    if re.search(auth, top, flags=re.I) is not None:\n",
-    "        \n",
-    "        issued = re.search(r'{}.*'.format(auth), top, flags=re.I)[0].split(' ')\n",
-    "        for i in issued:\n",
-    "            if all(c.isupper() or c == '-' or c == '.' for c in i):\n",
-    "                authority += i + ' '\n",
-    "        break\n",
-    "                \n",
     "    \n",
-    "# If nothing that could be related to issue authority was found,\n",
-    "# consider all words in the top to be such\n",
-    "if authority is '':\n",
-    "    \n",
-    "    for word in top.split():\n",
-    "        if all(c.isalpha() or c == '-' or c == '.' for c in word) \\\n",
-    "                    and len(word) > 3:\n",
-    "            authority += word + ' '\n",
-    "            \n",
-    "    \n",
-    "passport['ocr_result']['issue_authority'] = authority\n",
+    "passport['ocr_result']['issue_authority'] = re.search(r'(.*)\\d\\d\\d', top)[0]\n",
+    "\n",
     "    \n",
     "# Looking for issue date\n",
-    "date = re.search(r'\\d{2}\\.\\d{2}\\.\\d{4}', top)\n",
+    "date = re.search(r'\\d{2}.{1,3}\\d{2}.{1,3}\\d{4}', top)\n",
     "if date is not None:\n",
     "    passport['ocr_result']['issue_date'] = date[0]\n",
     "\n",
     "# Looking for name\n",
-    "full_name = re.search(r'(.*( .*(ВИЧ|ВНА)))', bottom, flags=re.I)\n",
     "\n",
-    "if full_name is not None:\n",
-    "\n",
-    "    passport['ocr_result']['patronymic_name'] = full_name[2]\n",
-    "    full_name = full_name[0].split()\n",
-    "\n",
-    "    name = []\n",
-    "    for n in full_name:\n",
-    "        if all(c.isalpha() for c in n) and len(n) >= 3:\n",
-    "            name.append(n)\n",
+    "full_name.split()\n",
+    "name = []\n",
+    "for f in full_name.split():\n",
+    "    if all(c.isalpha() for c in f):\n",
+    "        name.append(f)\n",
     "        \n",
-    "    if len(name) > 1:\n",
-    "        passport['ocr_result']['surname'] = name[0]\n",
-    "        passport['ocr_result']['name'] = name[1]\n",
-    "        \n",
+    "if len(name) < 3:\n",
+    "    for _ in range(3 - len(name)):\n",
+    "        name = [' '] + name\n",
+    "\n",
+    "passport['ocr_result']['patronymic_name'] = name[-1]\n",
+    "passport['ocr_result']['name'] = name[-2]\n",
+    "passport['ocr_result']['surname'] = name[-3]\n",
+    "\n",
+    "\n",
     "\n",
     "# Looking for birth date\n",
-    "date = re.search(r'\\d{2}\\.\\d{2}\\.\\d{4}', bottom)\n",
+    "date = re.search(r'\\d{2}\\.*\\d{2}\\.*\\d{4}', bottom)\n",
     "if date is not None:\n",
     "    passport['ocr_result']['birth_date'] = date[0]\n",
     "    \n",
@@ -502,7 +516,7 @@
     "    \n",
     "# Looking for passport series\n",
     "\n",
-    "series = re.search(r'(\\d{2} \\d{2})', number)\n",
+    "series = re.search(r'(\\d{2} {1,3}\\d{2})', number)\n",
     "if series is not None:\n",
     "    passport['ocr_result']['series'] = series[0]\n",
     "    \n",
@@ -515,34 +529,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'ocr_result': {'doc_type': 'passport',\n",
-       "  'issue_authority': 'УВД Г.СУРГУТА И РАЙОНА ',\n",
-       "  'issue_code': '863-014',\n",
-       "  'issue_date': '12.03.2002',\n",
-       "  'surname': '',\n",
-       "  'name': '',\n",
-       "  'patronymic_name': '',\n",
-       "  'birth_date': '24.05.1977',\n",
-       "  'gender': '',\n",
-       "  'birth_place': 'ПОС. ГОРЯЧЕВОДСКИЙ ГОР. СТАВРОПОЛЬСКОГО КРАЯ СТАВРОПОЛЬСКОГ КРАЯ ПАВЛОВИЧ САТВАЛОВ СЕРГЕЙ ',\n",
-       "  'series': '67 01',\n",
-       "  'number': '538398'},\n",
-       " 'text': 'РОСсСийскля\\n12.03.2002\\nме\\n\\nХАНТЫ-МАНСИЙСКОГО АВТОНОМНО О ОКРУГА\\n7\\nГОМ-1 УВД Г.СУРГУТА И РАЙОНА\\n\\nаш\\nТЮМЕНСКОЙ ОБЛАСТИ\\nФЕДЕРАЦИЯ\\n863-014\\n1\\n\\nПОС. ГОРЯЧЕВОДСКИЙ ГОР. ПЯТИГОРСКА,\\nСТАВРОПОЛЬСКОГО КРАЯ\\n\\nСТАВРОПОЛЬСКОГ О КРАЯ\\nПАВЛОВИЧ\\nСАТВАЛОВ\\nСЕРГЕЙ\\n24.05.1977\\n'}"
+       "  'issue_authority': 'ФЕДЕРАЦИЯ РОССИИСКАЯ ОТДЕЛЕНИЕМ УФМС РОССИИ ПО САМАРСКОЙ ОБЛАСТИ В ОКТЯБРЬСКОМ РАЙОНЕ ГОР. САМАРЫ 630—010 Аата вылачи 03 .07 ® 2012',\n",
+       "  'issue_code': '630—010',\n",
+       "  'issue_date': '03 .07 ® 2012',\n",
+       "  'surname': ' ',\n",
+       "  'name': 'СТОЛЯРОВА',\n",
+       "  'patronymic_name': 'АНАТОЛЬЕВНА',\n",
+       "  'birth_date': '13.06.1967',\n",
+       "  'gender': 'female',\n",
+       "  'birth_place': 'КУЙБЫМЕВ ',\n",
+       "  'series': '36  11',\n",
+       "  'number': '593634'},\n",
+       " 'text': \"ФЕДЕРАЦИЯ РОССИИСКАЯ ОТДЕЛЕНИЕМ УФМС РОССИИ ПО САМАРСКОЙ ОБЛАСТИ В ОКТЯБРЬСКОМ РАЙОНЕ ГОР. САМАРЫ 630—010 Аата вылачи 03 .07 ® 2012 Кол полразлели Анчная полних СТОЛЯРОВА  АНАТОЛЬЕВНА 13.06.1967 ЖЕН. КУЙБЫМЕВ  << ТЕТ8<АМАТОЕ ЯЕММА< < <<<<<<<<<< '06131Е<<<<<<<1120703630010<60 36  11  593634\"}"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "passport"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'36  11  593634'"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_name.split()\n",
+    "name = []\n",
+    "for f in full_name.split():\n",
+    "    if all(c.isalpha() for c in f):\n",
+    "        name.append(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if len(name) < 3:\n",
+    "    for _ in range(3 - len(name)):\n",
+    "        name = [' '] + name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' ', 'СТОЛЯРОВА', 'АНАТОЛЬЕВНА']"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name"
    ]
   },
   {
